# lyrics_generator

./: .gitignore  README.md  hola_mundo.txt  hola_mundo_juan.py  hola_mundo_william.txt  holamundo_xdxd  pyproject.toml
docs/1.business_understanding/: project_charter.md
docs/2.data/: data_definition.md  data_dictionary.md  data_summary.md
docs/3.modeling/: baseline_models.md  model_report.md
docs/4.deployment/: deploymentdoc.md
docs/5.acceptance/: exit_report.md
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md
docs/infrastructure/: infrastructure_docs.md
docs/modeling/: baseline_models.md
lyrics_generator/database/: lyrics.txt-2021_12_17.txt
lyrics_generator/flask-deployment/: app.py  idx2char.txt
lyrics_generator/visualization/: Clustering_graph.html
lyricsgenius/database/: lyrics.txt
lyricsgenius/models/: Implementation_LSTM.ipynb
scripts/: README.md
scripts/1.data_acquisition/: data_acquisition_LyricGeniusAPI.py
scripts/2.eda/: eda_lyrics.ipynb
scripts/2.preprocessing/: feature_extraction_LSTM.py
scripts/3.evaluation/: model_evaluation_agg_clus.ipynb
scripts/4.preprocessing/: Feature_extraction.ipynb
scripts/data_acquisition/: data_acquisition_LyricGeniusAPI.py  data_acquisition_POO.ipynb  main.py
scripts/eda/: eda_POO.ipynb  eda_lyrics.ipynb
scripts/evaluation/: model_evaluation_agg_clus.py
scripts/preprocessing/: Feature_extraction.ipynb  Feature_extraction_LSTM.ipynb  data_cleaning.py  data_cleaning_poo.ipynb  feature_extraction.py
scripts/training/: training_LSTM.py  (+3 more)
(+12 files in other folders)
